2010-01-20  Georg von Hippel <gmv22@cantab.net>

	* Added StarshapeMark class and constants for four-, five-,
	six- and eight-pointed stars as vertex markers.

	* Added Gravitino line class.

	* Added Phantom line class for invisible lines.

	* Added Ghost line class for dotted lines (like in YM ghost loops)

2010-01-19  Georg von Hippel <gmv22@cantab.net>

	* Added docstrings to methods missing them.

	* Added PolygonalMark class and constants for triangular,
        diamond-shaped, pentagonal, hexagonal, heptagonal and octogonal
        vertex markers.

2009-10-01  Georg von Hippel <gmv22@cantab.net>

	* Added size support for labels, contributed by Matt Bellis.

	* Minor improvements to XSLT stylesheets.

2009-05-19  Georg von Hippel <gmv22@cantab.net>

	* Changed feynml.py to use hashlib instead of deprecated md5.

	* Added all FeynML linetypes to NamedLines in lines.py.

	* Added a "math" string attribute to FeynML objects and created
	a stylesheet to extract those and just multiply them together
	(using no particular syntax).

2009-05-18  Georg von Hippel <gmv22@cantab.net>

	* Added XSLT stylesheet for rudimentary FeynML to FeynMF
	transformation.

2009-05-13  Georg von Hippel <gmv22@cantab.net>

	* Fixed variable name "as" in lines.py to "ass"
	("as" is a reserved word in Python 2.6.x and 3.x).

	* Changed ElementTree import in feynml.py to use xml.etree package.

2009-01-08  Andy Buckley  <andy@insectnation.org>

	* Corrected capitalisation of PyX installation requirement.

2008-04-29  Andy Buckley  <andy@insectnation.org>

	* Fixed bug in points.py, pointed out by Sue Ann Koay.

2007-12-17  Andy Buckley  <andy@insectnation.org>

	* Removed docs from the tarball - cuts down package size
	enormously, can always be regenerated by developers and we'll make
	sure there's a version on the website for users.

	* Fixed bug with the curvature determination for gluino, gaugino
	and graviton lines: the max *radius* was being determined,