@@ -1,3 +1,8 @@
+2010-01-21  Georg von Hippel <gmv22@cantab.net>
+
+	* Added curved attribute to ParallelArrow class to allow
+	parallel arrows to bend with the curve.
+
 2010-01-20  Georg von Hippel <gmv22@cantab.net>
 
 	* Added StarshapeMark class and constants for four-, five-,
